# simplePBD

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/glm/: CMakeLists.txt  manual.md
ext/imgui/: CMakeLists.txt
ext/imgui/src/: imgui.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
include/: Application.h  UniformBufferObject.h  camera.h  material.h  mesh.h  pbd.h  scene.h  shader.h  spirv_reflect.h  utility.h  vertex.h  vk_command_manager.h  vk_context.h  vk_descriptor.h  vk_device.h  vk_graphics_pipeline.h  vk_instance.h  vk_pipeline.h  vk_renderpass.h  vk_resource_manager.h  vk_swap_chain.h  vulkan_image_utils.h  vulkan_memory_utils.h  win_config.h
res/shader/: frag.spv  shader.frag  shader.vert  shadow.vert.glsl  shadow.vert.spv  vert.spv
src/: Application.cpp  camera.cpp  main.cpp  my_context.cpp  spirv_reflect.c  utility.cpp  vk_context.cpp  vk_resource_manager.cpp
